[gd_scene load_steps=14 format=2]

[ext_resource path="res://Resource/Buttons/Choose-1.png" type="Texture" id=1]
[ext_resource path="res://Resource/Buttons/Choose-2.png" type="Texture" id=2]
[ext_resource path="res://Resource/Buttons/Return-1-v2.png" type="Texture" id=3]
[ext_resource path="res://Resource/Maps/autumn_icon.png" type="Texture" id=4]
[ext_resource path="res://Resource/Maps/summer_icon.png" type="Texture" id=5]
[ext_resource path="res://Resource/Maps/winter_icon.png" type="Texture" id=6]
[ext_resource path="res://Game/UI/Screen/MapScreen/MapScreen.gd" type="Script" id=7]
[ext_resource path="res://Resource/Fonts/Bungee-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Resource/Maps/spring_icon.png" type="Texture" id=9]
[ext_resource path="res://Resource/Buttons/Return-2.png" type="Texture" id=10]
[ext_resource path="res://Game/UI/Screen/Background/Linear/ParallaxLinear.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=3]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StreamTexture" id=4]
flags = 4

[node name="MapScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = false
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
margin_right = 965.0
margin_bottom = 168.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/CenterContainer"]
margin_top = 52.0
margin_right = 965.0
margin_bottom = 116.0
mouse_filter = 2
custom_constants/margin_right = 320
custom_constants/margin_left = 320

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/CenterContainer/MarginContainer"]
margin_left = 320.0
margin_right = 645.0
margin_bottom = 64.0
mouse_filter = 2
custom_constants/separation = 17

[node name="CardMenu1" type="TextureRect" parent="ScrollContainer/CenterContainer/MarginContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/CenterContainer/MarginContainer/HBoxContainer/CardMenu1"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 9 )

[node name="CardMenu2" type="TextureRect" parent="ScrollContainer/CenterContainer/MarginContainer/HBoxContainer"]
margin_left = 81.0
margin_right = 151.0
margin_bottom = 64.0
rect_min_size = Vector2( 70, 64 )

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/CenterContainer/MarginContainer/HBoxContainer/CardMenu2"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 5 )

[node name="CardMenu3" type="TextureRect" parent="ScrollContainer/CenterContainer/MarginContainer/HBoxContainer"]
margin_left = 168.0
margin_right = 238.0
margin_bottom = 64.0
rect_min_size = Vector2( 70, 64 )

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/CenterContainer/MarginContainer/HBoxContainer/CardMenu3"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 4 )

[node name="CardMenu4" type="TextureRect" parent="ScrollContainer/CenterContainer/MarginContainer/HBoxContainer"]
margin_left = 255.0
margin_right = 325.0
margin_bottom = 64.0
rect_min_size = Vector2( 70, 64 )

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/CenterContainer/MarginContainer/HBoxContainer/CardMenu4"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 131.0
margin_top = 14.0
margin_right = 179.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
text = "Name"
align = 1
valign = 1

[node name="Choose" type="TouchScreenButton" parent="."]
position = Vector2( 120, 144 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 1 )
pressed = ExtResource( 2 )

[node name="Back" type="TouchScreenButton" parent="."]
position = Vector2( 8, 8 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 3 )
pressed = ExtResource( 10 )

[node name="ParallaxLinear" parent="." instance=ExtResource( 11 )]

[node name="MapName" type="Sprite" parent="."]
position = Vector2( 160, 19 )
scale = Vector2( 0.1, 0.1 )
texture = SubResource( 4 )

[connection signal="gui_input" from="ScrollContainer" to="." method="_on_ScrollContainer_gui_input"]
[connection signal="released" from="Choose" to="." method="_on_Choose_released"]
[connection signal="released" from="Back" to="." method="_on_Back_released"]
